--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  *{
+   
+    font-size: 30px;
+    background-color: #a1ddec;
+   
   }
+
+button {
+
+  top:50%;
+  background-color:#13425e;
+  color: #fff;
+  border:none;
+  padding:5px;
+  box-shadow: 0px 0px 2px 2px rgb(173, 54, 54);
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover {
+  background-color:#002ead;
+  transition: 0.7s;
 }
 
-.App-link {
-  color: #61dafb;
-}
+h1 {
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 40pt;
 }
