--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   *{
    
     font-size: 30px;
-    background-color: #a1ddec;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    
   }
 
